--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@color/design_default_color_background"
     >
 
     <ImageView
@@ -13,33 +13,70 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
-    <!--可以滚动浏览屏幕外的数据-->
-    <ScrollView
-        android:id="@+id/weather_layout"
+    <!--DrawerLayout 滑动菜单  第一个控件是主屏幕内容  第二个控件是菜单内容-->
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:overScrollMode="never">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
-        <!-- android:fitsSystemWindows="true" 为系统状态栏留出空间-->
-        <LinearLayout
-            android:orientation="vertical"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="true">
+            android:layout_height="match_parent">
+            <!--ScrollView只能有一个直接子布局-->
+            <!--可以滚动浏览屏幕外的数据-->
+            <ScrollView
+                android:id="@+id/weather_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="none"
+                android:overScrollMode="never">
 
-            <include layout="@layout/title"/>
+                <!-- android:fitsSystemWindows="true" 为系统状态栏留出空间-->
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true">
 
-            <include layout="@layout/now"/>
+                    <include layout="@layout/title"/>
 
-            <include layout="@layout/forecast"/>
+                    <include layout="@layout/now"/>
 
-            <include layout="@layout/aqi"/>
+                    <include layout="@layout/forecast"/>
 
-            <include layout="@layout/suggestion"/>
+                    <include layout="@layout/aqi"/>
+
+                    <include layout="@layout/suggestion"/>
 
 
-        </LinearLayout>
+                </LinearLayout>
 
-    </ScrollView>
+            </ScrollView>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+
+        <!--android:layout_gravity在滑动菜单中一定要指定-->
+        <fragment
+            android:id="@+id/choose_area_fragment"
+            android:name="com.coolweather.android.ChooseAreaFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity = "start"
+            />
+
+        <!--android:layout_gravity一定要指定-->
+<!--        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity = "start"
+            />-->
+
+
+    </androidx.drawerlayout.widget.DrawerLayout>
 </FrameLayout>
